--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "@types/lodash": "^4.14.96",
     "admin-lte": "2.3.11",
     "angularfire2": "^5.0.0-rc.4",
     "bootstrap": "^3.3.7",
@@ -32,6 +33,7 @@
     "jquery": "^3.2.1",
     "jquery-slimscroll": "^1.3.8",
     "jqueryui": "^1.11.1",
+    "lodash": "^4.17.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
